--- a/index.html
+++ b/index.html
@@ -1,82 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>World Explorer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <main class="app">
-    <h1 class="app-title">World Explorer</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>World Explorer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="app">
+      <h1 class="app-title">World Explorer</h1>
 
-    <section id="search-section" class="search-section">
-      <label for="country-input" class="sr-only">Country</label>
-      <input id="country-input" class="search-input" type="text" placeholder="Type a country (e.g., Japan)" />
-      <button id="search-button" class="search-button">Search</button>
+      <section id="search-section" class="search-section">
+        <label for="country-input" class="sr-only">Country</label>
+        <input
+          id="country-input"
+          class="search-input"
+          type="text"
+          placeholder="Type a country (e.g., Japan)"
+        />
+        <button id="search-button" class="search-button">Search</button>
 
-      <div id="suggestions-box" class="suggestions-box" aria-live="polite"></div>
-      <div id="error-box" class="error-box" role="alert"></div>
-    </section>
+        <div
+          id="suggestions-box"
+          class="suggestions-box"
+          aria-live="polite"
+        ></div>
+        <div id="error-box" class="error-box" role="alert"></div>
+      </section>
 
-    <section id="country-panel" class="country-panel"></section>
-    <section id="news-panel" class="news-panel"></section>
-  </main>
+      <section id="country-panel" class="country-panel"></section>
+      <section id="news-panel" class="news-panel"></section>
+    </main>
 
+    <!-- Country card -->
+    <template id="tpl-country-card">
+      <article class="country-card">
+        <header class="country-card__header">
+          <h2 class="country-card__title" data-field="name"></h2>
+          <img class="country-card__flag" data-field="flag" alt="" />
+        </header>
 
-  <!-- Country card -->
-  <template id="tpl-country-card">
-    <article class="country-card">
-      <header class="country-card__header">
-        <h2 class="country-card__title" data-field="name"></h2>
-        <img class="country-card__flag" data-field="flag" alt="" />
-      </header>
+        <dl class="country-card__grid">
+          <div>
+            <dt>Official</dt>
+            <dd data-field="official"></dd>
+          </div>
+          <div>
+            <dt>Region</dt>
+            <dd>
+              <span data-field="region"></span> /
+              <span data-field="subregion"></span>
+            </dd>
+          </div>
+          <div>
+            <dt>Capital</dt>
+            <dd data-field="capital"></dd>
+          </div>
+          <div>
+            <dt>Population</dt>
+            <dd data-field="population"></dd>
+          </div>
+          <div>
+            <dt>Area</dt>
+            <dd data-field="area"></dd>
+          </div>
+          <div>
+            <dt>Languages</dt>
+            <dd data-field="languages"></dd>
+          </div>
+          <div>
+            <dt>Currencies</dt>
+            <dd data-field="currencies"></dd>
+          </div>
+          <div>
+            <dt>Timezones</dt>
+            <dd data-field="timezones"></dd>
+          </div>
+          <div>
+            <dt>Calling Code</dt>
+            <dd data-field="calling"></dd>
+          </div>
+          <div>
+            <dt>TLDs</dt>
+            <dd data-field="tlds"></dd>
+          </div>
+          <div>
+            <dt>ISO</dt>
+            <dd data-field="iso"></dd>
+          </div>
+          <div class="country-card__map">
+            <a target="_blank" rel="noopener noreferrer" data-field="mapHref"
+              >View on map</a
+            >
+          </div>
+        </dl>
 
-      <dl class="country-card__grid">
-        <div><dt>Official</dt><dd data-field="official"></dd></div>
-        <div><dt>Region</dt><dd><span data-field="region"></span> / <span data-field="subregion"></span></dd></div>
-        <div><dt>Capital</dt><dd data-field="capital"></dd></div>
-        <div><dt>Population</dt><dd data-field="population"></dd></div>
-        <div><dt>Area</dt><dd data-field="area"></dd></div>
-        <div><dt>Languages</dt><dd data-field="languages"></dd></div>
-        <div><dt>Currencies</dt><dd data-field="currencies"></dd></div>
-        <div><dt>Timezones</dt><dd data-field="timezones"></dd></div>
-        <div><dt>Calling Code</dt><dd data-field="calling"></dd></div>
-        <div><dt>TLDs</dt><dd data-field="tlds"></dd></div>
-        <div><dt>ISO</dt><dd data-field="iso"></dd></div>
-        <div class="country-card__map"><a target="_blank" rel="noopener noreferrer" data-field="mapHref">View on map</a></div>
-      </dl>
+        <div class="country-card__borders">
+          <p><strong>Borders:</strong></p>
+          <div class="borders-list" data-field="bordersMount"></div>
+        </div>
+      </article>
+    </template>
 
-      <div class="country-card__borders">
-        <p><strong>Borders:</strong></p>
-        <div class="borders-list" data-field="bordersMount"></div>
-      </div>
-    </article>
-  </template>
+    <!-- Border button -->
+    <template id="tpl-border-button">
+      <button type="button" class="neighbor-button" data-cca3=""></button>
+    </template>
 
-  <!-- Border button -->
-  <template id="tpl-border-button">
-    <button type="button" class="neighbor-button" data-cca3=""></button>
-  </template>
+    <!-- News block -->
+    <template id="tpl-news-block">
+      <article class="news-block">
+        <h3 class="news-block__title">Top News</h3>
+        <ul class="news-list" data-field="list"></ul>
+      </article>
+    </template>
 
-  <!-- News block -->
-  <template id="tpl-news-block">
-    <article class="news-block">
-      <h3 class="news-block__title">Top News</h3>
-      <ul class="news-list" data-field="list"></ul>
-    </article>
-  </template>
+    <!-- Single news item -->
+    <template id="tpl-news-item">
+      <li class="news-item">
+        <a
+          class="news-item__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          data-field="url"
+        >
+          <span data-field="title"></span>
+        </a>
+        <small class="news-item__source" data-field="source"></small>
+      </li>
+    </template>
 
-  <!-- Single news item -->
-  <template id="tpl-news-item">
-    <li class="news-item">
-      <a class="news-item__link" target="_blank" rel="noopener noreferrer" data-field="url">
-        <span data-field="title"></span>
-      </a>
-      <small class="news-item__source" data-field="source"></small>
-    </li>
-  </template>
-
-  <script type="module" src="app.js"></script>
-</body>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
