--- a/index.html
+++ b/index.html
@@ -1,174 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>World Explorer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main class="app">
-      <h1 class="app-title">World Explorer</h1>
+	<head>
+		<meta charset="UTF-8" />
+		<title>World Explorer</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
+	</head>
+	<body>
+		<main class="app">
+			<h1 class="app-title">World Explorer</h1>
 
-      <section id="search-section" class="search-section">
-        <label for="country-input" class="sr-only">Country</label>
-        <input
-          id="country-input"
-          class="search-input"
-          type="text"
-          placeholder="Type a country (e.g., Japan)"
-        />
-        <button id="search-button" class="search-button">Search</button>
+			<section
+				id="search-section"
+				class="search-section"
+			>
+				<label
+					for="country-input"
+					class="sr-only"
+					>Country</label
+				>
+				<input
+					id="country-input"
+					class="search-input"
+					type="text"
+					value="japan"
+					placeholder="Type a country (e.g., Japan)"
+				/>
+				<button
+					id="search-button"
+					class="search-button"
+				>
+					Search
+				</button>
 
-        <div
-          id="suggestions-box"
-          class="suggestions-box"
-          aria-live="polite"
-        ></div>
-        <div id="error-box" class="error-box" role="alert"></div>
-      </section>
+				<div
+					id="suggestions-box"
+					class="suggestions-box"
+					aria-live="polite"
+				></div>
+				<div
+					id="error-box"
+					class="error-box"
+					role="alert"
+				></div>
+			</section>
+			<section class="country-panel-wrapper bg-secondary">
+				<div class="container">
+					<section
+						id="country-panel"
+						class="country-panel"
+					></section>
+				</div>
+			</section>
+			<section
+				id="news-panel"
+				class="news-panel"
+			></section>
+		</main>
 
-      <section id="country-panel" class="country-panel"></section>
-      <section id="news-panel" class="news-panel"></section>
-    </main>
+		<!-- Country card -->
+		<template id="tpl-country-card">
+			<article class="country-card py-5">
+				<div class="row">
+					<div class="col-12 col-md-8">
+						<header class="country-card__header">
+							<h2
+								class="country-card__title"
+								data-field="name"
+							></h2>
+							<img
+								class="country-card__flag img-fluid"
+								data-field="flag"
+								alt=""
+							/>
+						</header>
+					</div>
+					<div class="col-12 col-md-4">
+						<aside>
+							<dl class="country-card__grid">
+								<div class="d-flex flex-nowrap gap-5">
+									<dt>Official Lang <i class="bi bi-chat-right-fill"></i></dt>
+									<dd data-field="official"></dd>
+								</div>
+								<div class="d-flex flex-nowrap gap-5">
+									<dt>Region <i class="bi bi-pin-map-fill"></i></dt>
+									<dd>
+										<span data-field="region"></span> /
+										<span data-field="subregion"></span>
+									</dd>
+								</div>
+								<div class="d-flex flex-nowrap gap-5">
+									<dt>Capital <i class="bi bi-geo-alt-fill"></i></dt>
+									<dd data-field="capital"></dd>
+								</div>
+								<div class="d-flex flex-nowrap gap-5">
+									<dt>Population <i class="bi bi-people-fill"></i></dt>
+									<dd data-field="population"></dd>
+								</div>
+								<div>
+									<dt>Area</dt>
+									<dd data-field="area"></dd>
+								</div>
+								<div>
+									<dt>Languages</dt>
+									<dd data-field="languages"></dd>
+								</div>
+								<div>
+									<dt>Currencies</dt>
+									<dd data-field="currencies"></dd>
+								</div>
+								<div>
+									<dt>Timezones</dt>
+									<dd data-field="timezones"></dd>
+								</div>
+								<div>
+									<dt>Calling Code</dt>
+									<dd data-field="calling"></dd>
+								</div>
+								<div>
+									<dt>TLDs</dt>
+									<dd data-field="tlds"></dd>
+								</div>
+								<div>
+									<dt>ISO</dt>
+									<dd data-field="iso"></dd>
+								</div>
+								<div class="country-card__map">
+									<a
+										target="_blank"
+										rel="noopener noreferrer"
+										data-field="mapHref"
+										>View on map</a
+									>
+								</div>
+							</dl>
+						</aside>
+					</div>
+				</div>
+				<div class="country-card__borders">
+					<p><strong>Borders:</strong></p>
+					<div
+						class="borders-list"
+						data-field="bordersMount"
+					></div>
+				</div>
+			</article>
+		</template>
 
-    <!-- Country card -->
-    <template id="tpl-country-card">
-      <article class="country-card">
-        <header class="country-card__header">
-          <h2 class="country-card__title" data-field="name"></h2>
-          <img class="country-card__flag" data-field="flag" alt="" />
-        </header>
+		<!-- Border button -->
+		<template id="tpl-border-button">
+			<button
+				type="button"
+				class="neighbor-button"
+				data-cca3=""
+			></button>
+		</template>
 
-        <dl class="country-card__grid">
-          <div>
-            <dt>Official</dt>
-            <dd data-field="official"></dd>
-          </div>
-          <div>
-            <dt>Region</dt>
-            <dd>
-              <span data-field="region"></span> /
-              <span data-field="subregion"></span>
-            </dd>
-          </div>
-          <div>
-            <dt>Capital</dt>
-            <dd data-field="capital"></dd>
-          </div>
-          <div>
-            <dt>Population</dt>
-            <dd data-field="population"></dd>
-          </div>
-          <div>
-            <dt>Area</dt>
-            <dd data-field="area"></dd>
-          </div>
-          <div>
-            <dt>Languages</dt>
-            <dd data-field="languages"></dd>
-          </div>
-          <div>
-            <dt>Currencies</dt>
-            <dd data-field="currencies"></dd>
-          </div>
-          <div>
-            <dt>Timezones</dt>
-            <dd data-field="timezones"></dd>
-          </div>
-          <div>
-            <dt>Calling Code</dt>
-            <dd data-field="calling"></dd>
-          </div>
-          <div>
-            <dt>TLDs</dt>
-            <dd data-field="tlds"></dd>
-          </div>
-          <div>
-            <dt>ISO</dt>
-            <dd data-field="iso"></dd>
-          </div>
-          <div class="country-card__map">
-            <a target="_blank" rel="noopener noreferrer" data-field="mapHref"
-              >View on map</a
-            >
-          </div>
-        </dl>
+		<!-- News block -->
+		<template id="tpl-news-block">
+			<article class="news-block">
+				<h3 class="news-block__title">Top News</h3>
+				<ul
+					class="news-list"
+					data-field="list"
+				></ul>
+			</article>
+		</template>
 
-        <div class="country-card__borders">
-          <p><strong>Borders:</strong></p>
-          <div class="borders-list" data-field="bordersMount"></div>
-        </div>
-      </article>
-    </template>
+		<!-- Single news item -->
+		<template id="tpl-news-item">
+			<li class="news-item">
+				<a
+					class="news-item__link"
+					target="_blank"
+					rel="noopener noreferrer"
+					data-field="url"
+				>
+					<span data-field="title"></span>
+				</a>
+				<small
+					class="news-item__source"
+					data-field="source"
+				></small>
 
-    <!-- Border button -->
-    <template id="tpl-border-button">
-      <button type="button" class="neighbor-button" data-cca3=""></button>
-    </template>
+				<small
+					class="news-item__date"
+					data-field="date"
+				></small>
+			</li>
+		</template>
 
-    <!-- News block -->
-    <template id="tpl-news-block">
-      <article class="news-block">
-        <h3 class="news-block__title">Top News</h3>
-        <ul class="news-list" data-field="list"></ul>
-      </article>
-    </template>
+		<!-- Cities panel -->
+		<template id="tpl-cities-panel">
+			<section
+				class="cities-panel"
+				id="cities-panel"
+			>
+				<h3>Cities</h3>
 
-    <!-- Single news item -->
-    <template id="tpl-news-item">
-      <li class="news-item">
-        <a
-          class="news-item__link"
-          target="_blank"
-          rel="noopener noreferrer"
-          data-field="url"
-        >
-          <span data-field="title"></span>
-        </a>
-        <small class="news-item__source" data-field="source"></small>
+				<div class="cities-capital">
+					<p>
+						<strong>Capital:</strong>
+						<span data-field="city-capital-name"></span>
+					</p>
+					<p>
+						<strong>Coordinates:</strong>
+						<span data-field="city-capital-coords"></span>
+					</p>
+					<p>
+						<strong>Local time:</strong>
+						<span data-field="city-capital-localtime"></span>
+					</p>
+				</div>
 
-        <small class="news-item__date" data-field="date"></small>
-      </li>
-    </template>
+				<div class="cities-nearby">
+					<p><strong>Nearby capitals:</strong></p>
+					<ul
+						class="cities-nearby-list"
+						data-field="cities-nearby-list"
+					></ul>
+				</div>
+			</section>
+		</template>
 
-    <!-- Cities panel -->
-    <template id="tpl-cities-panel">
-      <section class="cities-panel" id="cities-panel">
-        <h3>Cities</h3>
-
-        <div class="cities-capital">
-          <p>
-            <strong>Capital:</strong>
-            <span data-field="city-capital-name"></span>
-          </p>
-          <p>
-            <strong>Coordinates:</strong>
-            <span data-field="city-capital-coords"></span>
-          </p>
-          <p>
-            <strong>Local time:</strong>
-            <span data-field="city-capital-localtime"></span>
-          </p>
-        </div>
-
-        <div class="cities-nearby">
-          <p><strong>Nearby capitals:</strong></p>
-          <ul class="cities-nearby-list" data-field="cities-nearby-list"></ul>
-        </div>
-      </section>
-    </template>
-
-    <script type="module" src="app.js"></script>
-  </body>
+		<script
+			type="module"
+			src="app.js"
+		></script>
+	</body>
 </html>
