--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 				</div>
 			</section>
 
-			<section>
-				<div class="row mt-5">
+			<section class="bg-white">
+				<div class="row m-0 mt-5 border border-1 rounded-3 p-3">
 					<div class="col-12 col-md-6">
 						<h2
 							class="country-card__title fs-1 tracking-wide"
@@ -132,7 +132,7 @@
 							class="mt-5"
 						></div>
 					</div>
-					<div class="col-12 col-md-6">
+					<div class="col-12 col-md-6 mt-5 mt-md-0">
 						<div class="country-card__borders">
 							<h3 class="mb-3">Bordering Countries:</h3>
 							<div
