feat: Implement banner resize on search
This commit introduces a dynamic banner that resizes upon the user's first search action. The banner transitions from a full-screen landing element to a smaller, persistent header.

This change improves the user experience by shifting focus to the country data after a search is performed, while maintaining the banner as a visual header.

Changes include:
- A `resizeBanner()` JavaScript function to alter CSS properties.
- CSS transitions for smooth height and font size animations.
- Conversion of the banner's background image from JPG to WebP for faster load times.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 				id="search-section"
 				class="search-section"
 			>
-				<div class="banner d-flex flex-wrap flex-column text-center">
+				<div class="banner d-flex flex-nowrap flex-column text-center">
 					<div class="landing-headings mt-5 fw-bolder">
 						<h1 class="landing-heading1 app-title">WORLD EXPLORER</h1>
-						<h2 class="landing-heading2">DISCOVER THE WORLD</h2>
+						<h2 class="landing-heading2 app-subtitle">DISCOVER THE WORLD</h2>
 					</div>
 					<div>
 						<div
