--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 			rel="stylesheet"
 			href="./assets/css/style.css"
 		/>
+		<script
+			type="module"
+			src="./assets/js/app.js"
+			defer
+		></script>
 	</head>
 	<body>
 		<main class="app">
@@ -208,10 +213,5 @@
 				></small>
 			</li>
 		</template>
-
-		<script
-			type="module"
-			src="app.js"
-		></script>
 	</body>
 </html>
