--- a/index.html
+++ b/index.html
@@ -35,54 +35,53 @@
 		<main class="app">
 			<section
 				id="search-section"
-				class="search-section"
+				class="search-section banner d-flex justify-content-center py-5"
 			>
-				<div class="banner d-flex flex-nowrap flex-column text-center">
-					<div class="landing-headings mt-5 fw-bolder">
-						<h1 class="landing-heading1 app-title">WORLD EXPLORER</h1>
-						<h2 class="landing-heading2 app-subtitle">DISCOVER THE WORLD</h2>
+				<div
+					class="container banner-content"
+					id="banner-content"
+				>
+					<div class="landing-headings fw-bolder mb-3">
+						<h1 class="landing-heading1 app-title text-center text-nowrap">WORLD EXPLORER</h1>
+						<h2 class="landing-heading2 app-subtitle text-center">DISCOVER THE WORLD</h2>
 					</div>
-					<div>
-						<div
-							class="d-flex mt-5 justify-content-center w-100"
-							role="search"
-						>
-							<label
-								for="country-input"
-								class="sr-only d-none"
-								>Country</label
-							>
+
+					<div
+						class="d-flex justify-content-center w-100"
+						role="search"
+					>
+						<div class="d-flex align-items-center rounded-pill bg-light w-75 p-1">
 							<input
 								id="country-input"
-								class="search-input w-50 rounded-pill px-4 py-1 me-2"
+								class="search-input rounded-pill w-100 border-0 px-3 bg-light"
 								type="search"
-								value="brazil"
+								value="Mexico"
 								placeholder="Type a country (e.g., Japan)"
 								aria-label="Search"
 							/>
-
 							<button
 								id="search-button"
 								class="search-button btn btn-primary rounded-pill"
 							>
 								Search
 							</button>
-
-							<div
-								id="suggestions-box"
-								class="suggestions-box"
-								aria-live="polite"
-							></div>
-							<div
-								id="error-box"
-								class="error-box"
-								role="alert"
-							></div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<section class="country-panel-wrapper bg-light py-5">
+				<div class="container">
+					<div
+						id="suggestions-box"
+						class="suggestions-box"
+						aria-live="polite"
+					></div>
+					<div
+						id="error-box"
+						class="error-box"
+						role="alert"
+					></div>
+				</div>
 				<div class="container">
 					<section
 						id="country-panel"
