--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 					</div>
 				</div>
 			</section>
-			<section class="country-panel-wrapper bg-light py-5">
+
+			<!-- Countries -->
+			<section class="country-panel-wrapper bg-light">
 				<div class="container">
 					<div
 						id="suggestions-box"
@@ -89,7 +91,9 @@
 					></section>
 				</div>
 			</section>
-			<section class="news-panel-wrapper bg-gradient py-5">
+
+			<!-- News -->
+			<section class="news-panel-wrapper bg-gradient">
 				<div class="container">
 					<section
 						id="news-panel"
@@ -98,6 +102,7 @@
 				</div>
 			</section>
 		</main>
+		<footer></footer>
 
 		<!-- Country card -->
 		<template id="tpl-country-card">
@@ -211,6 +216,9 @@
 					data-field="date"
 				></small>
 			</li>
+		</template>
+		<template id="footer-tpl">
+			<div class="container"><p class="text-center text-light">&copy; Copyright 2025</p></div>
 		</template>
 	</body>
 </html>
