--- a/index.html
+++ b/index.html
@@ -32,78 +32,80 @@
 		></script>
 	</head>
 	<body>
-		<main class="app">
-			<section
-				id="search-section"
-				class="search-section banner d-flex justify-content-center py-5"
-			>
-				<div
-					class="container banner-content"
-					id="banner-content"
+		<div class="app-wrapper">
+			<main class="app">
+				<section
+					id="search-section"
+					class="search-section banner d-flex justify-content-center py-5"
 				>
-					<div class="landing-headings fw-bolder mb-3">
-						<h1 class="landing-heading1 app-title text-center text-nowrap">WORLD EXPLORER</h1>
-						<h2 class="landing-heading2 app-subtitle text-center">DISCOVER THE WORLD</h2>
-					</div>
-
 					<div
-						class="d-flex justify-content-center w-100"
-						role="search"
+						class="container banner-content"
+						id="banner-content"
 					>
-						<div class="d-flex align-items-center rounded-pill bg-light w-75 p-1">
-							<input
-								id="country-input"
-								class="search-input rounded-pill w-100 border-0 px-3 bg-light"
-								type="search"
-								value="Mexico"
-								placeholder="Type a country (e.g., Japan)"
-								aria-label="Search"
-							/>
-							<button
-								id="search-button"
-								class="search-button btn btn-primary rounded-pill"
-							>
-								Search
-							</button>
+						<div class="landing-headings fw-bolder mb-3">
+							<h1 class="landing-heading1 app-title text-center text-nowrap">WORLD EXPLORER</h1>
+							<h2 class="landing-heading2 app-subtitle text-center">DISCOVER THE WORLD</h2>
+						</div>
+
+						<div
+							class="d-flex justify-content-center w-100"
+							role="search"
+						>
+							<div class="d-flex align-items-center rounded-pill bg-light w-75 p-1">
+								<input
+									id="country-input"
+									class="search-input rounded-pill w-100 border-0 px-3 bg-light"
+									type="search"
+									value="Mexico"
+									placeholder="Type a country (e.g., Japan)"
+									aria-label="Search"
+								/>
+								<button
+									id="search-button"
+									class="search-button btn btn-primary rounded-pill"
+								>
+									Search
+								</button>
+							</div>
 						</div>
 					</div>
-				</div>
-			</section>
+				</section>
 
-			<!-- Countries -->
-			<section class="country-panel-wrapper bg-light">
-				<div class="container">
-					<div
-						id="suggestions-box"
-						class="suggestions-box"
-						aria-live="polite"
-					></div>
-					<div
-						id="error-box"
-						class="error-box"
-						role="alert"
-					></div>
-				</div>
-				<div class="container">
-					<section
-						id="country-panel"
-						class="country-panel"
-					></section>
-				</div>
-			</section>
+				<!-- Countries -->
+				<section class="country-panel-wrapper">
+					<div class="container">
+						<div
+							id="suggestions-box"
+							class="suggestions-box"
+							role="alert"
+							aria-live="polite"
+						></div>
+						<div
+							id="error-box"
+							class="error-box"
+							role="alert"
+						></div>
+					</div>
+					<div class="container">
+						<section
+							id="country-panel"
+							class="country-panel"
+						></section>
+					</div>
+				</section>
 
-			<!-- News -->
-			<section class="news-panel-wrapper bg-gradient">
-				<div class="container">
-					<section
-						id="news-panel"
-						class="news-panel"
-					></section>
-				</div>
-			</section>
-		</main>
-		<footer></footer>
-
+				<!-- News -->
+				<section class="news-panel-wrapper bg-gradient">
+					<div class="container">
+						<section
+							id="news-panel"
+							class="news-panel"
+						></section>
+					</div>
+				</section>
+			</main>
+			<footer></footer>
+		</div>
 		<!-- Country card -->
 		<template id="tpl-country-card">
 			<section class="country-card">
