style: Refine background styles for consistency
Removes the background gradient from the news panel and updates a background to 'bg-light' for better visual alignment with the design.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</section>
 
 				<!-- News -->
-				<section class="news-panel-wrapper bg-gradient">
+				<section class="news-panel-wrapper">
 					<div class="container">
 						<section
 							id="news-panel"
@@ -139,7 +139,7 @@
 				</div>
 			</section>
 
-			<section class="bg-white">
+			<section class="bg-light rounded-3">
 				<div class="row m-0 mt-5 border border-1 rounded-3 p-3">
 					<div class="col-12 col-md-6">
 						<h2
