--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
 							role="search"
 						>
 							<div class="d-flex align-items-center rounded-pill bg-light w-75 p-1">
+								<i class="bi bi-search ms-2 fs-5"></i>
 								<input
 									id="country-input"
-									class="search-input rounded-pill w-100 border-0 px-3 bg-light"
+									class="search-input rounded-pill w-100 border-0 px-3 bg-light fs-5 fw-bold text-secondary"
 									type="search"
 									value="Mexico"
 									placeholder="Type a country (e.g., Japan)"
