feat: Display country summary from Wikipedia
Integrates the Wikipedia API to fetch and display a summary for the selected country, enhancing the information available to the user.

- Adds a 'renderCountrySummary' function to fetch data from the Wikipedia REST API.
- Introduces a new section and template in 'index.html' to render the summary.
- Removes the hardcoded 'Mexico' value from the search input.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 									id="country-input"
 									class="search-input rounded-pill w-100 border-0 px-3 bg-light fs-5 fw-bold text-secondary"
 									type="search"
-									value="Mexico"
 									placeholder="Type a country (e.g., Japan)"
 									aria-label="Search"
 								/>
@@ -71,7 +70,6 @@
 						</div>
 					</div>
 				</section>
-
 				<!-- Countries -->
 				<section class="country-panel-wrapper">
 					<div class="container">
@@ -86,6 +84,12 @@
 							class="error-box"
 							role="alert"
 						></div>
+					</div>
+					<div class="container">
+						<section
+							id="country-summary"
+							class="country-summary"
+						></section>
 					</div>
 					<div class="container">
 						<section
@@ -176,6 +180,9 @@
 					</div>
 				</div>
 			</section>
+		</template>
+		<template id="tlp-country-summary">
+			<div class="summary fs-5 mb-5"></div>
 		</template>
 
 		<!-- Border button -->
