feat: Enhance UI with Alegreya font and improved styling
Integrates the Alegreya font to create a more refined and consistent visual identity for the application. This change improves the overall user experience by enhancing readability and modernizing the design.

- Sets Alegreya as the primary font and imports it from Google Fonts.

- Adds new utility classes for card colors, box shadows, and button styling to improve component aesthetics.

- Streamlines assets by renaming the banner image and removing old, unused images.

- Refactors and cleans up CSS, removing redundant styles.

- Adjusts layout and text for better clarity in the country details view.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 			content="width=device-width, initial-scale=1"
 		/>
 		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
@@ -126,7 +148,7 @@
 					</div>
 					<div class="col-12 col-lg-5">
 						<ul class="country-card__grid fs-5 list-group">
-							<li class="list-group-item"><i class="bi bi-chat-right-fill"></i> Official Lang: <span data-field="official"></span></li>
+							<li class="list-group-item"><i class="bi bi-chat-right-fill"></i> Official: <span data-field="official"></span></li>
 							<li class="list-group-item">
 								<i class="bi bi-pin-map-fill"></i> Region: <span data-field="region"></span> / <span data-field="subregion"></span>
 							</li>
