feat(ui): Enhance card design and add button hover effects
This commit introduces a significant visual refresh to the application's UI to create a more modern and interactive experience.

- Applies a consistent card-based design using box-shadows and a unified color scheme across the country flag, details list, map container, and news section.
- Adds interactive hover effects (scaling and color changes) to the neighbor country buttons, improving user feedback.
- Updates the main background color and list group styles to align with the new, cohesive aesthetic.

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 					<div class="col-12 col-lg-7 mb-5 mb-lg-0">
 						<header class="country-card__header">
 							<img
-								class="country-card__flag img-fluid border border-1 rounded-2"
+								class="country-card__flag img-fluid border border-1 rounded-2 box-shadow"
 								data-field="flag"
 								alt=""
 							/>
 						</header>
 					</div>
 					<div class="col-12 col-lg-5">
-						<ul class="country-card__grid fs-5 list-group">
+						<ul class="country-card__grid fs-5 list-group box-shadow border-dark card-color">
 							<li class="list-group-item"><i class="bi bi-chat-right-fill"></i> Official: <span data-field="official"></span></li>
 							<li class="list-group-item">
 								<i class="bi bi-pin-map-fill"></i> Region: <span data-field="region"></span> / <span data-field="subregion"></span>
@@ -166,8 +166,8 @@
 				</div>
 			</section>
 
-			<section class="bg-light rounded-3">
-				<div class="row m-0 mt-5 border border-1 rounded-3 p-3">
+			<section class="bg-light rounded-3 border-dark">
+				<div class="row m-0 mt-5 border border-1 rounded-3 p-3 box-shadow card-color">
 					<div class="col-12 col-md-6">
 						<h2
 							class="country-card__title fs-1 tracking-wide"
@@ -218,7 +218,7 @@
 
 		<!-- News block -->
 		<template id="tpl-news-block">
-			<article class="news-block">
+			<article class="news-block box-shadow p-3 rounded-3 card-color">
 				<h3 class="news-block__title">Top News</h3>
 				<ul
 					class="news-list"
